string utilities--move to free func in namespace

--- a/libraryTest/libraryTest.vcxproj
+++ b/libraryTest/libraryTest.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="KeyedFilePersistenceTest.cpp" />
     <ClCompile Include="KeyedMemoryPersistenceTest.cpp" />
     <ClCompile Include="library.cpp" />
+    <ClCompile Include="NameNormalizerTest.cpp" />
     <ClCompile Include="PatronAccessTest.cpp" />
     <ClCompile Include="PatronServiceTest.cpp" />
     <ClCompile Include="PatronTest.cpp" />
