added video store

--- a/libraryTest/libraryTest.vcxproj
+++ b/libraryTest/libraryTest.vcxproj
@@ -90,17 +90,20 @@
     <ClCompile Include="BranchTest.cpp" />
     <ClCompile Include="CatalogTest.cpp" />
     <ClCompile Include="ClassificationServiceTest.cpp" />
+    <ClCompile Include="CustomerTest.cpp" />
     <ClCompile Include="HoldingBarcodeTest.cpp" />
     <ClCompile Include="HoldingServiceTest.cpp" />
     <ClCompile Include="HoldingTest.cpp" />
     <ClCompile Include="KeyedFilePersistenceTest.cpp" />
     <ClCompile Include="KeyedMemoryPersistenceTest.cpp" />
     <ClCompile Include="library.cpp" />
+    <ClCompile Include="MovieTest.cpp" />
     <ClCompile Include="NameNormalizerTest.cpp" />
     <ClCompile Include="PatronAccessTest.cpp" />
     <ClCompile Include="PatronServiceTest.cpp" />
     <ClCompile Include="PatronTest.cpp" />
     <ClCompile Include="PersistenceTest.cpp" />
+    <ClCompile Include="RentalTest.cpp" />
     <ClCompile Include="ScannerStateCheckinTest.cpp" />
     <ClCompile Include="ScannerStateCheckoutTest.cpp" />
     <ClCompile Include="ScannerStateInventoryTest.cpp" />
