--- a/libraryTest/libraryTest.vcxproj.filters
+++ b/libraryTest/libraryTest.vcxproj.filters
@@ -86,6 +86,15 @@
     <ClCompile Include="NameNormalizerTest.cpp">
       <Filter>util</Filter>
     </ClCompile>
+    <ClCompile Include="CustomerTest.cpp">
+      <Filter>video</Filter>
+    </ClCompile>
+    <ClCompile Include="MovieTest.cpp">
+      <Filter>video</Filter>
+    </ClCompile>
+    <ClCompile Include="RentalTest.cpp">
+      <Filter>video</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ASSERT_CURRENT_STATE.h">
@@ -131,6 +140,9 @@
     </Filter>
     <Filter Include="reporting">
       <UniqueIdentifier>{4f2be910-f405-4669-97dd-43c5710471a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="video">
+      <UniqueIdentifier>{b808365b-c94b-463e-af04-4e7f7b0a6a3b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
