put libs back after gitignore mistake

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 *.obj
 *.exe
 *.dll
-*.lib
 *.pdb
 *.ilk
 *.log
 *.tlog
 *.vcxproj.user
 **/*.VC.*db
-**/Debug/*
+library/**/Debug/*
+libraryTest/**/Debug/*
 **/Backup/*
 test.dat
