--- a/libraryTest/libraryTest.vcxproj
+++ b/libraryTest/libraryTest.vcxproj
@@ -84,6 +84,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="APortfolio.cpp" />
+    <ClCompile Include="AReservationService.cpp" />
     <ClCompile Include="BarcodeUtilTest.cpp" />
     <ClCompile Include="BookTest.cpp" />
     <ClCompile Include="BranchAccessTest.cpp" />
@@ -105,6 +106,7 @@
     <ClCompile Include="PatronTest.cpp" />
     <ClCompile Include="PersistenceTest.cpp" />
     <ClCompile Include="RentalTest.cpp" />
+    <ClCompile Include="ReportMailer.cpp" />
     <ClCompile Include="RomanConverterTest.cpp" />
     <ClCompile Include="ScannerStateCheckinTest.cpp" />
     <ClCompile Include="ScannerStateCheckoutTest.cpp" />
